[tool.poetry]
name = "dataflow"
version = "0.1.0"
description = "A tool helping you manage the different versions of your data flowing through your processing steps"
authors = ["\"François Weber <francois.weber.commercial@gmx.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.13.1"


[tool.poetry.group.mlflow.dependencies]
mlflow = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
